Коллекционируем пользователей (все комментарии учел)